--- a/src/Layouts/MainIntro/Main.scss
+++ b/src/Layouts/MainIntro/Main.scss
@@ -4,10 +4,16 @@
   background-color: #f9f9f9;
   display: flex;
   flex-direction: column;
-  height: 85vh;
+  height: 70vh;
   position: relative;
   width: 100%;
 
+  @include xl {
+    height: 85rem;
+  }
+  @include lg {
+    height: 90rem;
+  }
   @include md {
     height: 140rem;
   }
