--- a/src/Layouts/MainIntro/Main.scss
+++ b/src/Layouts/MainIntro/Main.scss
@@ -287,8 +287,11 @@
       }
 
       .tools {
+        @include xs {
+          top: 116rem !important;
+        }
         @include md {
-          top: 110rem;
+          top: 106rem;
         }
       }
     }
